--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <main>
         <p>Hi, my name is Bogdan Gura and I'm a 17 year old programmer.</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR8NGPL4-5WH6lKIFGGDHu06oTQdOsELfl6wztVh40QTzKJ-G8Jo7aVQkndy0LDhB7Ants:https://cdn.britannica.com/99/124299-050-4B4D509F/Linus-Torvalds-2012.jpg&usqp=CAU">
     </main>
 
     <footer>
