--- a/template.html
+++ b/template.html
@@ -10,10 +10,23 @@
 <body>
 
     <nav name="nav-bar">
-        <button>HOME</button>
-        <button>PROJECTS</button>
-        <button>CREDENTIALS</button>
-        <button>ABOUT ME</button>
+
+        <a href="index.html">
+            <button>HOME</button>
+        </a>
+
+        <a href="projects.html">
+            <button>PROJECTS</button>
+        </a>
+
+        <a href="credentials.html">
+            <button>CREDENTIALS</button>
+        </a>
+
+        <a href="about-me.html">
+            <button>ABOUT ME</button>
+        </a>
+        
     </nav>
 
     <header>
