--- a/index.html
+++ b/index.html
@@ -10,10 +10,23 @@
 <body>
 
     <nav name="nav-bar">
-        <button>HOME</button>
-        <button>PROJECTS</button>
-        <button>CREDENTIALS</button>
-        <button>ABOUT ME</button>
+        
+        <a href="index.html">
+            <button>HOME</button>
+        </a>
+
+        <a href="projects.html">
+            <button>PROJECTS</button>
+        </a>
+
+        <a href="credentials.html">
+            <button>CREDENTIALS</button>
+        </a>
+
+        <a href="about-me.html">
+            <button>ABOUT ME</button>
+        </a>
+        
     </nav>
 
     <header>
@@ -21,7 +34,7 @@
     </header>
 
     <main>
-        <p>Hi, my name is Bogdan Gura and I'm a 17 year old programmer.</p>
+        <p>Hi, my name is Bogdan Gura and I'm a 18 year old programmer.</p>
     </main>
 
     <footer>
