--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 
     <nav name="nav-bar">
         
-        <a href="H:\portfolio\index.html">
+        <a href="https://github.com/BogdanGura/BogdanGura.github.io/blob/main/index.html">
             <button>HOME</button>
         </a>
 
-        <a href="H:\portfolio\projects.html">
+        <a href="https://github.com/BogdanGura/BogdanGura.github.io/blob/main/projects.html">
             <button>PROJECTS</button>
         </a>
 
-        <a href="H:\portfolio\credentials.html">
+        <a href="https://github.com/BogdanGura/BogdanGura.github.io/blob/main/credentials.html">
             <button>CREDENTIALS</button>
         </a>
 
-        <a href="H:\portfolio\about-me.html">
+        <a href="https://github.com/BogdanGura/BogdanGura.github.io/blob/main/about-me.html">
             <button>ABOUT ME</button>
         </a>
 
