--- a/about-me.html
+++ b/about-me.html
@@ -11,19 +11,19 @@
 
     <nav name="nav-bar">
 
-        <a href="H:\portfolio\index.html">
+        <a href="\index.html">
             <button>HOME</button>
         </a>
 
-        <a href="H:\portfolio\projects.html">
+        <a href="\projects.html">
             <button>PROJECTS</button>
         </a>
 
-        <a href="H:\portfolio\credentials.html">
+        <a href="\credentials.html">
             <button>CREDENTIALS</button>
         </a>
 
-        <a href="H:\portfolio\about-me.html">
+        <a href="\about-me.html">
             <button>ABOUT ME</button>
         </a>
         
