--- a/template.html
+++ b/template.html
@@ -11,19 +11,19 @@
 
     <nav name="nav-bar">
 
-        <a href="index.html">
+        <a href="\index.html">
             <button>HOME</button>
         </a>
 
-        <a href="projects.html">
+        <a href="\projects.html">
             <button>PROJECTS</button>
         </a>
 
-        <a href="credentials.html">
+        <a href="\credentials.html">
             <button>CREDENTIALS</button>
         </a>
 
-        <a href="about-me.html">
+        <a href="\about-me.html">
             <button>ABOUT ME</button>
         </a>
         
