--- a/credentials.html
+++ b/credentials.html
@@ -30,11 +30,11 @@
     </nav>
 
     <header>
-        <h1>Header Text</h1>
+        <h1>Credentials List</h1>
     </header>
 
     <main>
-        <p>Main Text</p>
+        <p>Main Credentials</p>
     </main>
 
     <footer>
