--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,19 +11,19 @@
 
     <nav name="nav-bar">
         
-        <a href="\index.html">
+        <a href="\HTML\index.html">
             <button>HOME</button>
         </a>
 
-        <a href="\projects.html">
+        <a href="\HTML\projects.html">
             <button>PROJECTS</button>
         </a>
 
-        <a href="\credentials.html">
+        <a href="\HTML\credentials.html">
             <button>CREDENTIALS</button>
         </a>
 
-        <a href="\about-me.html">
+        <a href="\HTML\about-me.html">
             <button>ABOUT ME</button>
         </a>
 
