--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -11,7 +11,7 @@
 
     <nav name="nav-bar">
         
-        <a href="\HTML\index.html">
+        <a href="\index.html">
             <button>HOME</button>
         </a>
 
