--- a/HTML/about-me.html
+++ b/HTML/about-me.html
@@ -15,30 +15,43 @@
             <button>HOME</button>
         </a>
 
-        <a href="\HTML\projects.html">
+        <a href="HTML\projects.html">
             <button>PROJECTS</button>
         </a>
 
-        <a href="\HTML\credentials.html">
+        <a href="HTML\credentials.html">
             <button>CREDENTIALS</button>
         </a>
 
-        <a href="\HTML\about-me.html">
+        <a href="HTML\about-me.html">
             <button>ABOUT ME</button>
         </a>
         
     </nav>
 
     <header>
-        <h1>About Me</h1>
+        <h1>About me</h1>
     </header>
 
     <main>
-        <p>Main Text</p>
+        <!-- Image of me, well dressed -->
+        <img src="">
+
+        <p>Hello, my name is Bogdan Gura. I'm 18 year old studying programming at my <br>
+           local carear center and I really like it here. I remember I've gotten interested <br>
+           in programming when I was 15, it all started from a bad python course and now I do <br>
+           mostly web development but I do jave expereince in Java too.
+        </p>
     </main>
 
     <footer>
-        <p>Contact Info</p>
+        <p>Contact Info:</p>
+        <p>Phone Number: 440-570-8580</p>
+        <p>Email: bogdan.gura@stu.cvccworks.edu</p>
+
+        <a href="https://github.com/BogdanGura">
+            <p>My GitHub</p>
+        </a>
     </footer>
 </body>
 </html>
