--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         <a href="\HTML\about-me.html">
             <button>ABOUT ME</button>
         </a>
-
     </nav>
 
     <header>
@@ -34,11 +33,18 @@
     </header>
 
     <main>
+        <img>
         <p>Hi, my name is Bogdan Gura and I'm a 18 year old programmer.</p>
     </main>
 
     <footer>
-        <p>Contact Info</p>
+        <p>Contact Info:</p>
+        <p>Phone Number: 440-570-8580</p>
+        <p>Email: bogdan.gura@stu.cvccworks.edu</p>
+
+        <a href="https://github.com/BogdanGura">
+            <p>My GitHub</p>
+        </a>
     </footer>
 </body>
 </html>
