--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -35,12 +35,24 @@
 
     <main>
         <ul>
-            <li>Project 1</li>
-            <li>Project 2</li>
-            <li>Project 3</li>
-            <li>Project 4</li>
-            <li>Project 5</li>
-            <li>Project 6</li>
+            <a href="/Projects/frogPuzzle/puzzle.html">
+                <li>Play Frog Puzzle Game</li>
+            </a>
+            
+            <a href="/Projects/todoList/todo.html">
+                <li>Try Out Dynamic To do List</li>
+            </a>
+
+            <a href="/Projects/pizzaForm/pizza.html">
+                <li>Order Fresh Pizza from Mr.Ambrose</li>
+            </a>
+
+            <a href="/Projects/bdayCard/card.html">
+                <li>Make a Birthday Card for a Friend</li>
+            </a>
+
+            <li>Comming Soon....</li>
+            <li>Comming Soon....</li>
         </ul>
     </main>
 
