--- a/HTML/credentials.html
+++ b/HTML/credentials.html
@@ -30,15 +30,21 @@
     </nav>
 
     <header>
-        <h1>Credentials List</h1>
+        <h1>My Credentials and Awards</h1>
     </header>
 
     <main>
-        <p>Main Credentials</p>
+        <p>Resume</p>
     </main>
 
     <footer>
-        <p>Contact Info</p>
+        <p>Contact Info:</p>
+        <p>Phone Number: 440-570-8580</p>
+        <p>Email: bogdan.gura@stu.cvccworks.edu</p>
+
+        <a href="https://github.com/BogdanGura">
+            <p>My GitHub</p>
+        </a>
     </footer>
 </body>
 </html>
