--- a/HTML/about-me.html
+++ b/HTML/about-me.html
@@ -15,15 +15,15 @@
             <button>HOME</button>
         </a>
 
-        <a href="HTML\projects.html">
+        <a href="\HTML\projects.html">
             <button>PROJECTS</button>
         </a>
 
-        <a href="HTML\credentials.html">
+        <a href="\HTML\credentials.html">
             <button>CREDENTIALS</button>
         </a>
 
-        <a href="HTML\about-me.html">
+        <a href="\HTML\about-me.html">
             <button>ABOUT ME</button>
         </a>
         
