--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
 
     <main>
-        <img>
+        <img src="Pictures/IMG-9288 (1).jpg">
         <p>Hi, my name is Bogdan Gura and I'm a 18 year old programmer.</p>
     </main>
 
