--- a/HTML/about-me.html
+++ b/HTML/about-me.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="portfolio.css" rel="stylesheet">
+    <link href="\portfolio.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
@@ -35,8 +35,7 @@
     </header>
 
     <main>
-        <!-- Image of me, well dressed -->
-        <img src="">
+        <img src="\Pictures\69194100120--71C3C103-2434-4668-B612-9939B59AD961.jpg">
 
         <p>Hello, my name is Bogdan Gura. I'm 18 year old studying programming at my <br>
            local carear center and I really like it here. I remember I've gotten interested <br>
