--- a/HTML/about-me.html
+++ b/HTML/about-me.html
@@ -42,11 +42,13 @@
            in programming when I was 15, it all started from a bad python course and now I do <br>
            mostly web development but I do jave expereince in Java too.
         </p>
+
+        <p>Place I would like to visit</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61776.70145458851!2d120.93836016442235!3d14.596577749787336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397ca03571ec38b%3A0x69d1d5751069c11f!2sManila%2C%20Metro%20Manila%2C%20Philippines!5e0!3m2!1sen!2sus!4v1695153651587!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
 
     <footer>
         <p>Contact Info:</p>
-        <p>Phone Number: 440-570-8580</p>
         <p>Email: bogdan.gura@stu.cvccworks.edu</p>
 
         <a href="https://github.com/BogdanGura">
