--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <a href="https://github.com/BogdanGura">
             <p>My GitHub</p>
         </a>
+        <a href="https://kadenemrich.com/"><p>Kaden was here.</p></a>
     </footer>
 </body>
 </html>
