--- a/HTML/template.html
+++ b/HTML/template.html
@@ -3,17 +3,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="portfolio.css" rel="stylesheet">
+    <link href="/portfolio.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Main Page</title>
 </head>
 <body>
 
     <nav name="nav-bar">
 
-        <a href="\HTML\index.html">
-            <button>HOME</button>
+        <a href="\index.html">
+            <button id="home-btn">HOME</button>
         </a>
 
         <a href="\HTML\projects.html">
@@ -38,8 +38,13 @@
         <p>Main Text</p>
     </main>
 
-    <footer>
-        <p>Contact Info</p>
+    <footer class="index-footer">
+        <p>Contact Info:</p>
+        <p>Email: bogdan.gura@stu.cvccworks.edu</p>
+
+        <a href="https://github.com/BogdanGura">
+            <p>My GitHub</p>
+        </a>
     </footer>
 </body>
 </html>
