--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="\portfolio.css" rel="stylesheet">
+    <link href="/portfolio.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
@@ -13,7 +13,7 @@
     <nav name="nav-bar">
         
         <a href="\index.html">
-            <button>HOME</button>
+            <button id="home-btn">HOME</button>
         </a>
 
         <a href="\HTML\projects.html">
@@ -34,7 +34,7 @@
         <h1>My Projects</h1>
     </header>
 
-    <main>
+    <main id="projects-main">
         <ul>
             <a href="/Projects/frogPuzzle/puzzle.html">
                 <li>Play Frog Puzzle Game</li>
@@ -57,7 +57,7 @@
         </ul>
     </main>
 
-    <footer>
+    <footer class="index-footer">
         <p>Contact Info:</p>
         <p>Email: bogdan.gura@stu.cvccworks.edu</p>
 
