--- a/HTML/credentials.html
+++ b/HTML/credentials.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="\portfolio.css" rel="stylesheet">
+    <link href="/portfolio.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Credentials</title>
@@ -13,7 +13,7 @@
     <nav name="nav-bar">
 
         <a href="\index.html">
-            <button>HOME</button>
+            <button id="home-btn">HOME</button>
         </a>
 
         <a href="\HTML\projects.html">
@@ -34,11 +34,15 @@
         <h1>My Credentials and Awards</h1>
     </header>
 
-    <main>
-        <p>Resume</p>
+    <main id="cred-main">
+        <div id="pic-section">
+            <img id="left-img" src="/Pictures/IMG-9929 (1).jpg">
+
+            <img id="right-img" src="/Pictures/IMG-9928.jpg">
+        </div>
     </main>
 
-    <footer>
+    <footer class="index-footer">
         <p>Contact Info:</p>
         <p>Email: bogdan.gura@stu.cvccworks.edu</p>
 
