--- a/HTML/about-me.html
+++ b/HTML/about-me.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="\portfolio.css" rel="stylesheet">
+    <link href="/portfolio.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
@@ -13,7 +13,7 @@
     <nav name="nav-bar">
 
         <a href="\index.html">
-            <button>HOME</button>
+            <button id="home-btn">HOME</button>
         </a>
 
         <a href="\HTML\projects.html">
@@ -34,7 +34,8 @@
         <h1>About me</h1>
     </header>
 
-    <main>
+    <main id="about-main">
+        <!-- Image of me, well dressed -->
         <img src="\Pictures\69194100120--71C3C103-2434-4668-B612-9939B59AD961.jpg">
 
         <p>Hello, my name is Bogdan Gura. I'm 18 year old studying programming at my <br>
@@ -42,12 +43,9 @@
            in programming when I was 15, it all started from a bad python course and now I do <br>
            mostly web development but I do jave expereince in Java too.
         </p>
-
-        <p>Place I would like to visit</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61776.70145458851!2d120.93836016442235!3d14.596577749787336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397ca03571ec38b%3A0x69d1d5751069c11f!2sManila%2C%20Metro%20Manila%2C%20Philippines!5e0!3m2!1sen!2sus!4v1695153651587!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
 
-    <footer>
+    <footer class="index-footer">
         <p>Contact Info:</p>
         <p>Email: bogdan.gura@stu.cvccworks.edu</p>
 
