--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="\portfolio.css" rel="stylesheet">
+    <link href="portfolio.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
@@ -13,7 +13,7 @@
     <nav name="nav-bar">
         
         <a href="\index.html">
-            <button>HOME</button>
+            <button id="home-btn">HOME</button>
         </a>
 
         <a href="\HTML\projects.html">
@@ -33,13 +33,14 @@
         <h1>Welcome to Bogdan's Portfolio</h1>
     </header>
 
-    <main>
+    <main id="index-main">
         <img src="Pictures/IMG-9288 (1).jpg">
         <p>Hi, my name is Bogdan Gura and I'm a 18 year old programmer.</p>
     </main>
 
-    <footer>
+    <footer class="index-footer">
         <p>Contact Info:</p>
+        <p>Phone Number: 440-570-8580</p>
         <p>Email: bogdan.gura@stu.cvccworks.edu</p>
 
         <a href="https://github.com/BogdanGura">
