--- a/HTML/credentials.html
+++ b/HTML/credentials.html
@@ -11,7 +11,7 @@
     <!-- Personal CSS -->
     <link rel="stylesheet" href="/CSS/index.css">
 
-    <title>Home Page</title>
+    <title>Credentials</title>
   </head>
 
   <body>
@@ -47,7 +47,7 @@
       <main class="container-main">
 
         <div class="row">
-          <div class="column-md-6 column-sm-12">
+          <div class="column-md-4 column-sm-12">
 
             <div id="award-plaque">
 
@@ -63,7 +63,7 @@
                 
               </div>
 
-          <div class="column-md-6 column-sm-12">
+          <div class="column-md-4 column-sm-12">
               <div class="bottom-part">
                 Computer Programming Concepts
                 <br>
@@ -72,12 +72,18 @@
                 2023
               </div>
           </div> 
+
+          <div class="medal column-md-4 column-sm-12">
+            
+          </div>
              <!--End of Column  -->
       </div> 
       <!-- End of row -->
 
-        <div class="row">
-
+        <div id="resume" class="row">
+          <a href="https://sites.google.com/d/12WgcG1FEvWcsZWHux4yMhytqZYvvPJ2X/p/11u0pVA5PeLKQHnFHcDBea8idsoRYsMJ-/edit?pli=1">
+            <button class="btn-info btn-lg">Click here to view my Resume</button>
+          </a>
         </div>
       </main>
 
