--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -80,7 +80,7 @@
 
           <!-- Game Status Label -->
           <label class="status-label">Game status:</label>
-          <a href="https://github.com/BogdanGura/snakeGameEnhanced/Html/menu.html">
+          <a href="https://bogdangura.github.io/snakeGameEnhanced/index.html">
             <button class="btn-success btn-lg">Completed ✅</button>
           </a>
         </li>
