--- a/HTML/credentials.html
+++ b/HTML/credentials.html
@@ -42,6 +42,14 @@
             <h3>BPA Awards, Resume</h3>
           </div>
         </div>
+
+        <!-- Medal -->
+      <div class="medal-inline">
+          <h2 id="regional">Regional</h2>
+          <img src="/Pictures/bpa-logo.png">
+          <h2 id="events">Competitive Events</h2>
+        </div>
+      </div>
       
       <!-- Main Content -->
       <main class="container-main">
@@ -72,19 +80,9 @@
                 2023
               </div>
           </div> 
-
-          <div class="medal column-md-4 column-sm-12">
-            
-          </div>
              <!--End of Column  -->
       </div> 
       <!-- End of row -->
-
-        <div id="resume" class="row">
-          <a href="https://sites.google.com/d/12WgcG1FEvWcsZWHux4yMhytqZYvvPJ2X/p/11u0pVA5PeLKQHnFHcDBea8idsoRYsMJ-/edit?pli=1">
-            <button class="btn-info btn-lg">Click here to view my Resume</button>
-          </a>
-        </div>
       </main>
 
       <!-- Footer -->
