--- a/HTML/about-me.html
+++ b/HTML/about-me.html
@@ -37,21 +37,23 @@
   <!-- Intro content -->
     <div class="jumbotron jumbotron-fluid">
       <div class="about-text">
-        About Me
+        <h1>About Me</h1>
       </div>
     </div>
   
   <!-- Main Content -->
-  <main class="container-main">
+  <main class="container-main-about-me">
     <h1>About Me</h1>
-    <p>My name is Bogdan Gura and I study programming and Software Development <br>
+    <br>
+    <p> Hi, my name is Bogdan Gura and I study programming and Software Development <br>
        I really enjoy it here and I have found like minded people which is nice. <br>
        For me personally, Programming is my purpose to build cool projects and provide <br>
-       value to others so in the future I could make a nice income that would support my <br>
-       travel where ever I'm.
+       value to others so in the future I could do something impactful with my skills.
     </p> 
 
     <img id="personal-img2" src="/Pictures/69194100120--71C3C103-2434-4668-B612-9939B59AD961.jpg">
+
+    <br>
 
     <h1>My hobbies are</h1>
     <ol>
@@ -61,26 +63,35 @@
       <li>Cycling</li>
     </ol>
 
-    <h2>Places I would like to visit</h2>
+    <br>
 
-    <ol>
+    <ol class="list-travel">
+      <h2>Places I would like to visit</h2>
+
+      <br>
+      <br>
+
       <li>
         Japan
+        <br>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59029359.156532!2d93.10719126029218!3d25.442737778266594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34674e0fd77f192f%3A0xf54275d47c665244!2sJapan!5e0!3m2!1sen!2sus!4v1698004255648!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </li>
 
       <li>
         Philippines
+        <br>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8001437.034457859!2d122.62175425!3d11.69783515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x324053215f87de63%3A0x784790ef7a29da57!2sPhilippines!5e0!3m2!1sen!2sus!4v1698004240371!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </li>
 
       <li>
         Sweden
+        <br>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59029359.156532!2d93.10719126029218!3d25.442737778266594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465cb2396d35f0f1%3A0x22b8eba28dad6f62!2sSweden!5e0!3m2!1sen!2sus!4v1698004271386!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </li>
 
       <li>
         Switzerland
+        <br>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5604792.12408249!2d2.944803569518319!3d46.69162757100159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c64ef6f596d61%3A0x5c56b5110fcb7b15!2sSwitzerland!5e0!3m2!1sen!2sus!4v1698004292840!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </li>
     </ol>
