Tetris Enhanced Status updated

--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -42,8 +42,8 @@
         <h3>Click on the Project Status Button to Play</h3>
         <!-- List of Projects -->
         <ul class="game-list">
-          <li>Snake Game Enchanced <button id="snake-btn" class="btn-info btn-lg">Check out Snake Game</button></li>
-          <li>Tetris Enchanced <button id="tetris-btn" class="btn-info btn-lg">Check out Tetris</button></li> 
+          <li>Snake Game Enhanced <button id="snake-btn" class="btn-info btn-lg">Check out Snake Game</button></li>
+          <li>Tetris Enhanced <button id="tetris-btn" class="btn-info btn-lg">Check out Tetris</button></li> 
           <li>IT Clicker <button id="clicker-btn" class="btn-info btn-lg">Check out Full-Stack Clicker</button></li>
           <li>Web Scrapper <button id="webscraper-btn" class="btn-info btn-lg">Check out Webscraper</button></li>
         </ul>
@@ -55,7 +55,7 @@
       <ul class="projects-list">
         <!-- Snake Game section -->
         <li id="snake-game-item">
-          <h1>Snake Game Enchanced 🐍</h1>
+          <h1>Snake Game Enhanced 🐍</h1>
 
           <p class="description-text">
             &nbsp; Snake Game is a game where you control a snake <br>
@@ -64,7 +64,7 @@
             points that randomely spawn on the board. <br>
             <br>
 
-            In the Enchanced version there are many <span class="achievements">achievements</span> <br>
+            In the Enhanced version there are many <span class="achievements">achievements</span> <br>
             that a player can unlock while playing the game. <br>
             Also another item is added, a <span class="mine">mine</span>. When snake collides <br>
             with a <span class="mine">mine</span> the game ends the same as when snake collides <br>
@@ -80,14 +80,14 @@
 
           <!-- Game Status Label -->
           <label class="status-label">Game status:</label>
-          <a href="/Projects/SnakeGameEnchanced/Html/menu.html">
+          <a href="https://github.com/BogdanGura/snakeGameEnhanced/index.html">
             <button class="btn-success btn-lg">Completed ✅</button>
           </a>
         </li>
 
         <!-- Testris Section -->
         <li id="tetris-game-item">
-          <h1>Tetris Enchanced 🕹️</h1>
+          <h1>Tetris Enhanced 🕹️</h1>
 
           <p class="description-text">
             &nbsp; Tetris is a game where the player controls blocks or <br>
@@ -97,7 +97,7 @@
             and give player points. When <span class="tetrominoes">tetrominoes</span> stack on top <br>
             of each other and reach the celing, then the game ends. <br>
             <br>
-            In Tetris Enchanced, player can play in solo mode or against <br>
+            In Tetris Enhanced, player can play in solo mode or against <br>
             an <span class="AI">A.I</span> There are also plenty <span class="achievements">achievements</span> in the game to be earned <br>
             and dicovered. <br>
             <br>
@@ -110,7 +110,7 @@
 
            <!-- Game Status Label -->
            <label class="status-label">Game status:</label>
-           <button class="btn-danger btn-lg">Comming Soon !!!</button>
+           <button class="btn-info btn-lg">In Development⚙️</button>
         </li>
 
         <!-- IT Clicker -->
