Spelling error corrected

--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -95,7 +95,7 @@
             Player's objective is to align these <span class="tetrominoes">tetrominoes</span> in a <br>
             continious horizontal line that when complete will disapear <br>
             and give player points. When <span class="tetrominoes">tetrominoes</span> stack on top <br>
-            of each other and reach the celing, then the game ends. <br>
+            of each other and reach the ceiling, then the game ends. <br>
             <br>
             In Tetris Enhanced, player can play in solo mode or against <br>
             an <span class="AI">A.I</span> There are also plenty <span class="achievements">achievements</span> in the game to be earned <br>
@@ -125,7 +125,7 @@
             different skill sets. <br>
             <br>
             Full-Stack Clicker is a clicker style game that simulates a process of<br>
-            learning to become a Full-Stack Developer and earn <span class=💰>money</span><br>
+            learning to become a Full-Stack Developer and earn <span class=💰>money.</span><br>
             At the start of the game you can pick the difficulty which will <br>
             determine how fast you progress through the game. Player's goal is <br>
             to reach the <span class=💰>money</span> objective that is stated in the difficulty. But <br>
