Misspell error corrected

--- a/Projects/SnakeGameEnchanced/Html/menu.html
+++ b/Projects/SnakeGameEnchanced/Html/menu.html
@@ -18,7 +18,7 @@
         <div class="menu-container">
             
             <header>
-                <h1>Snake Game Enchanced</h1>
+                <h1>Snake Game Enhanced</h1>
                 <h3>Created By: <span id="creator">Bogdan Gura</span></h3>
 
                 <!-- Input field -->
