--- a/HTML/about-me.html
+++ b/HTML/about-me.html
@@ -11,7 +11,7 @@
     <!-- Personal CSS -->
     <link rel="stylesheet" href="/CSS/index.css">
 
-    <title>Home Page</title>
+    <title>About Me</title>
   </head>
 
   <body>
