--- a/Projects/TetrisEnhanced/Html/tetris-solo.html
+++ b/Projects/TetrisEnhanced/Html/tetris-solo.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
     <!-- Personal CSS -->
-    <link rel="stylesheet" href="/BogdanGura.github.io/Projects/TetrisEnhanced/Css/tetris-solo.css">
+    <link rel="stylesheet" href="/Projects/TetrisEnhanced/Css/tetris-solo.css">
     
 </head>
 
@@ -84,6 +84,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <!-- Personal JS -->
-    <script type="module" src="/BogdanGura.github.io/Projects/TetrisEnhanced/Scripts/tetris-solo.js"></script>
+    <script type="module" src="/Projects/TetrisEnhanced/Scripts/tetris-solo.js"></script>
 </body>
 </html>
