Bug fixes + starting menu added + spelling mistake fixed

--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -44,7 +44,7 @@
         <ul class="game-list">
           <li>Snake Game Enhanced <button id="snake-btn" class="btn-info btn-lg">Check out Snake Game</button></li>
           <li>Tetris Enhanced <button id="tetris-btn" class="btn-info btn-lg">Check out Tetris</button></li> 
-          <li>IT Clicker <button id="clicker-btn" class="btn-info btn-lg">Check out Full-Stack Clicker</button></li>
+          <li>Full Stack Clicker <button id="clicker-btn" class="btn-info btn-lg">Check out Full-Stack Clicker</button></li>
           <li>Web Scrapper <button id="webscraper-btn" class="btn-info btn-lg">Check out Webscraper</button></li>
         </ul>
       </div>
@@ -110,15 +110,15 @@
 
            <!-- Game Status Label -->
            <label class="status-label">Game status:</label>
-           <button class="btn-info btn-lg">In Development⚙️</button>
+           <button class="btn-warning btn-lg">Alpha Version Available 👷</button>
         </li>
 
-        <!-- IT Clicker -->
+        <!-- Full Stack Clicker -->
         <li id="IT-game-item">
           <h1>Full-Stack Clicker 🖥️🖱️</h1>
 
           <p class="description-text">
-            &nbsp; Full Stack Developer Defenition: is a developer or engineer who <br>
+            &nbsp; Full Stack Developer Definition: is a developer or engineer who <br>
             can build both the front end and the back end of a website. The front <br>
             end (the parts of a website a user sees and interacts with) and the <br>
             back end (the behind-the-scenes data storage and processing) require <br>
