--- a/Projects/TetrisEnhanced/Html/tetris-solo.html
+++ b/Projects/TetrisEnhanced/Html/tetris-solo.html
@@ -33,8 +33,12 @@
 
                 <!-- Make a smooth counter -->
                 <h4>Points: <span id="points">0</span></h4>
+
                 <!-- Make a smooth counter here too -->
                 <h4>Rows Cleared: <span id="rows-cleared">0</span></h4>
+
+                <!--Level Indicator-->
+                <h4>Level: <span id="level-indicator">0</span></h4>
 
                 <h4>Achievement Earned: </h4>
                 <!-- 4 buttons for mobile -->
