--- a/Projects/TetrisEnhanced/Html/menu.html
+++ b/Projects/TetrisEnhanced/Html/menu.html
@@ -1,11 +1,49 @@
+<!-- Bogdan Gura -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tetris Enhanced</title>
+    <link rel="icon" href="/Projects/TetrisEnhanced/Images/tetris-icon.png">
+    <!-- BootStrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <!-- Custom Font -->
+    <link href=’https://fonts.googleapis.com/css?family=Actor’ rel=’stylesheet’>
+    <!-- Personal CSS -->
+    <link rel="stylesheet" href="/Projects/TetrisEnhanced/Css/tetris-menu.css">
+    <title>Tetris Enhanced Menu</title>
 </head>
 <body>
-    <h1>Welcome to the menu of Tetris Enhanced by Bogdan Gura</h1>
+    <div class="container-fluid">
+        <div class="menu-container">
+            
+            <header>
+                <h1>Tetris Enhanced</h1>
+                <h3>Created By: <span id="creator">Bogdan Gura</span></h3>
+
+                <!-- Input field -->
+                <h4 id="error-div"></h4>
+                <input id="input-username" placeholder="Type your username...">
+                <!-- Players Record Score -->
+                <h3 disabled id="record-field">Record Score: <span id="recordScore">0</span></h3>
+            </header>
+            
+            <div class="button-container">
+                <!-- Menu Buttons -->
+                <button id="playBtn">Single Player</button>
+                <button id="">VS A.I (Not Available yet)</button>
+                <button id="clearBtn">Clear Save (Not Available yet)</button>
+                <a href="">
+                    <button >Achivements (Not Available yet)</button>
+                </a>
+                    <!-- Qutting leads to my portfolio website
+                to the projects section-->
+                <a id="a-quit" href="https://bogdangura.github.io/HTML/projects.html">
+                    <button>Quit</button>
+                </a>
+            </div>
+        </div>
+    </div>
+<script src=""></script>
 </body>
 </html>
