Menu added with some minor bug fixes.

--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -110,7 +110,10 @@
 
            <!-- Game Status Label -->
            <label class="status-label">Game status:</label>
-           <button class="btn-warning btn-lg">Alpha Version Available 👷</button>
+           <a href="/Projects/TetrisEnhanced/Html/menu.html">
+             <button class="btn-warning btn-lg">Alpha Version Available 👷</button>
+           </a>
+           
         </li>
 
         <!-- Full Stack Clicker -->
