Spelling error fixed in Snake game menu

--- a/Projects/SnakeGameEnchanced/Html/menu.html
+++ b/Projects/SnakeGameEnchanced/Html/menu.html
@@ -33,7 +33,7 @@
                 <button id="playBtn">Play</button>
                 <button id="clearBtn">Clear Save</button>
                 <a href="/Projects/SnakeGameEnchanced/Html/achievements.html">
-                    <button>Achivements</button>
+                    <button>Achievements</button>
                 </a>
                     <!-- Qutting leads to my portfolio website
                 to the projects section-->
