--- a/Projects/TetrisEnhanced/Html/menu.html
+++ b/Projects/TetrisEnhanced/Html/menu.html
@@ -8,7 +8,7 @@
     <!-- BootStrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <!-- Custom Font -->
-    <link href=’https://fonts.googleapis.com/css?family=Actor’ rel=’stylesheet’>
+    <link href='https://fonts.googleapis.com/css?family=Actor' rel='stylesheet'>
     <!-- Personal CSS -->
     <link rel="stylesheet" href="/Projects/TetrisEnhanced/Css/tetris-menu.css">
     <title>Tetris Enhanced Menu</title>
