A.I functionality added and Tetris Enhanced project status checked to Beta

--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -111,7 +111,7 @@
            <!-- Game Status Label -->
            <label class="status-label">Game status:</label>
            <a href="/Projects/TetrisEnhanced/Html/menu.html">
-             <button class="btn-warning btn-lg">Alpha Version Available 👷</button>
+             <button class="btn-warning btn-lg">Beta Version Available 👷</button>
            </a>
            
         </li>
