All general achievements are added to the game

--- a/Projects/TetrisEnhanced/Html/tetris-solo.html
+++ b/Projects/TetrisEnhanced/Html/tetris-solo.html
@@ -40,7 +40,9 @@
                 <!--Level Indicator-->
                 <h4>Level: <span id="level-indicator">0</span></h4>
 
-                <h4 id="achievement-field">Achievement Earned: </h4>
+                <h4>Achievement Earned: 
+                    <h4 id="achievement-field"></h4>
+                </h4>
                 <!-- 4 buttons for mobile -->
 
                 <button type="button" id="btn-up" class="btn btn-inverted btn-lg">   
