--- a/Projects/TetrisEnhanced/Html/achievements.html
+++ b/Projects/TetrisEnhanced/Html/achievements.html
@@ -13,36 +13,38 @@
 <body>
     <div class="container">
         <h1>Hall of Achivements👑</h1>
-        <h2>Thanks to <strong>Lucas Rosenberger</strong> for Blockhead achievement series</h2>
+        <h2>Thanks to <strong>Lucas Rosenberger</strong> for giving me an idea for Blockhead achievement series</h2>
         <div class="achievement-container">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (1).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (2).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (4).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (5).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (6).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (7).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (8).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (9).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing.png" title="">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (1).png" title="">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (2).png" title="">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (5).png" title="">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (3).png" title="">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (4).png" title="">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (6).png" title="">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (7).png" title="">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (8).png" title="">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (9).png" title="">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (10).png" title="">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (11).png" title="">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (12).png" title="">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (13).png" title="">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (14).png" title="">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (22).png" title="">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (23).png" title="">
+            <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (24).png" title="">
+            <img class="ai-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (20).png" title="">
+            <img class="ai-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (21).png" title="">
+            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (15).png" title="">
+            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (16).png" title="">
+            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (17).png" title="">
+            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (18).png" title="">
+            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (28).png" title="">
+            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (30).png" title="">
+            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (19).png" title="">
+            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (25).png" title="">
+            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (26).png" title="">
+            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (27).png" title="">
         </div>
         <a href="/Projects/SnakeGameEnchanced/Html/menu.html">
             <button>Back</button>
