Achievement system implemented

--- a/Projects/TetrisEnhanced/Html/achievements.html
+++ b/Projects/TetrisEnhanced/Html/achievements.html
@@ -35,21 +35,21 @@
             <img class="general-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (24).png" title="">
             <img class="ai-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (20).png" title="">
             <img class="ai-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (21).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (15).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (16).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (17).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (18).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (28).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (30).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (19).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (25).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (26).png" title="">
-            <img src="/Projects/TetrisEnhanced/Images/pixilart-drawing (27).png" title="">
+            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (15).png" title="">
+            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (16).png" title="">
+            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (17).png" title="">
+            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (18).png" title="">
+            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (28).png" title="">
+            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (30).png" title="">
+            <img class="name-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (19).png" title="">
+            <img class="clear-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (25).png" title="">
+            <img class="clear-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (26).png" title="">
+            <img class="clear-img" src="/Projects/TetrisEnhanced/Images/pixilart-drawing (27).png" title="">
         </div>
-        <a href="/Projects/SnakeGameEnchanced/Html/menu.html">
+        <a href="/Projects/TetrisEnhanced/Html/menu.html">
             <button>Back</button>
         </a>
     </div>
-<script src=""></script>
+<script src="/Projects/TetrisEnhanced/Scripts/achivementManager.js"></script>
 </body>
 </html>
