--- a/Projects/TetrisEnhanced/Html/menu.html
+++ b/Projects/TetrisEnhanced/Html/menu.html
@@ -38,8 +38,8 @@
 
                 <button id="playAI" class="vsAIBtn"><span class="glowing-text-vs-ai-btn">VS A.I</span></button>
 
-                <a href="">
-                    <button class="in-development"><span class="glowing-text-in-development">Achievements - In Development</span ></button>
+                <a href="/Projects/TetrisEnhanced/Html/achievements.html">
+                    <button id="achievementBtn" class="in-development"><span class="glowing-text-in-development">Achievements</span ></button>
                 </a>
 
                 <button class="in-development" id="clearBtn"><span class="glowing-text-in-development">Clear Save</span ></button>
@@ -51,6 +51,6 @@
             </div>
         </div>
     </div>
-<script src="/Projects/TetrisEnhanced/Scripts/log-In-Manager.js"></script>
+<script type="module" src="/Projects/TetrisEnhanced/Scripts/log-In-Manager.js"></script>
 </body>
 </html>
